# vis2-molecules

./: .gitignore  Cargo.toml  README.md  index.html
css/: main.css
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/implementors/bytemuck/pod/: trait.Pod.js
doc/implementors/bytemuck/zeroable/: trait.Zeroable.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/default/: trait.Default.js
doc/molecules/: all.html  fn.main.html  index.html  sidebar-items.js
doc/molecules/application/: index.html  struct.Application.html
doc/molecules/camera/: index.html  sidebar-items.js  struct.RotationCamera.html  trait.Camera.html
doc/molecules/grid/: index.html  sidebar-items.js  struct.VoxelGrid.html  struct.VoxelPointer.html
doc/molecules/pipelines/: index.html  sidebar-items.js
doc/molecules/ui/: enum.Message.html  index.html  sidebar-items.js  struct.UserInterface.html
doc/molecules/utils/: enum.ShaderStage.html  fn.load_glsl.html  index.html  sidebar-items.js  trait.ApplicationSkeleton.html  trait.RoundToMultiple.html
doc/src/molecules/: application.rs.html  camera.rs.html  grid.rs.html  main.rs.html  ui.rs.html  utils.rs.html
html/: index.html
js/: main.js
src/: application.rs  camera.rs  grid.rs  main.rs  ui.rs  utils.rs
src/pipelines/: generate_spirv.bat  mod.rs
src/pipelines/raymarch/: mod.rs  raymarch.comp  raymarch.comp.spv
src/pipelines/render/: mod.rs  render.frag  render.frag.spv  render.vert  render.vert.spv
src/pipelines/ssao/: mod.rs  ssao.comp  ssao.comp.spv
(+25 files in other folders)
