[package]
name = "molecules"
version = "0.1.0"
authors = ["Matus Talcik <matus.talcik@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5"
winit = "0.22"
# glsl-to-spirv = "0.1"
lib3dmol = "0.3.2"
nalgebra-glm = "0.7.0"
rand = "0.7"
bytemuck = "1"
futures = "0.3"
env_logger = "0.7"

iced = { git ="https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_style = { git = "https://github.com/hecrj/iced" }